--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1"
 async-broadcast = "0.7"
 async-compatibility-layer = { version = "1.1", default-features = false, features = [
     "logging-utils",
