--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,10 @@ clap = { version = "4.4", features = ["derive", "env"] }
 committable = "0.2"
 derivative = "2.2"
 futures = "0.3"
-hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "rc-0.5.56" }
-hotshot-builder-api = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "rc-0.5.56" }
-hotshot-events-service = { git = "https://github.com/EspressoSystems/hotshot-events-service.git", tag = "0.1.25" }
-hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "rc-0.5.56" }
+hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "ss/fee-upgrade" }
+hotshot-builder-api = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "ss/fee-upgrade" }
+hotshot-events-service = { git = "https://github.com/EspressoSystems/hotshot-events-service.git", branch = "abdul/update-hotshot" }
+hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "ss/fee-upgrade" }
 serde = { version = "1.0", features = ["derive"] }
 sha2 = "0.10"
 snafu = "0.8"
@@ -32,4 +32,4 @@ tracing = "0.1"
 vbs = "0.1"
 
 [dev-dependencies]
-hotshot-example-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "rc-0.5.56" }
+hotshot-example-types = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "ss/fee-upgrade" }
