--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ clap = { version = "4.4", features = ["derive", "env"] }
 committable = "0.2"
 derivative = "2.2"
 futures = "0.3"
-hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "main" }
+hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "main", features = ["dependency-tasks"] }
 hotshot-builder-api = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "main" }
 hotshot-events-service = { git = "https://github.com/EspressoSystems/hotshot-events-service.git", branch = "daily-build" }
 hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "main" }
