--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,6 @@ vbs = "0.1"
 
 [dev-dependencies]
 hotshot-example-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "rc-0.5.66" }
+
+[lints.rust]
+unexpected_cfgs = { level = "warn", check-cfg = ['cfg(async_executor_impl, values("async-std"))', 'cfg(async_executor_impl, values("tokio"))'] }
