--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,8 @@ tide-disco = "0.9"
 tokio = "1"
 tracing = "0.1"
 vbs = "0.1"
+lru = "0.12.3"
+hex = "0.4.3"
 
 [dev-dependencies]
 hotshot-example-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "rc-0.5.64" }
