--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ derivative = "2.2"
 futures = "0.3"
 hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.70" }
 hotshot-builder-api = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.70" }
-hotshot-events-service = { git = "https://github.com/EspressoSystems/hotshot-events-service.git", tag = "0.1.40" }
+hotshot-events-service = { git = "https://github.com/EspressoSystems/hotshot-events-service.git", branch = "update-hotshot" }
 hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.70" }
 serde = { version = "1.0", features = ["derive"] }
 sha2 = "0.10"
