--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,10 @@ clap = { version = "4.5", features = ["derive", "env"] }
 committable = "0.2"
 derivative = "2.2"
 futures = "0.3"
-hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "rc-0.5.71" }
-hotshot-builder-api = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "rc-0.5.71" }
+hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "bump/rc-0.5.71" }
+hotshot-builder-api = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "bump/rc-0.5.71" }
 hotshot-events-service = { git = "https://github.com/EspressoSystems/hotshot-events-service.git", branch = "hotshot/rc-0.5.71" }
-hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "rc-0.5.71" }
+hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "bump/rc-0.5.71" }
 serde = { version = "1.0", features = ["derive"] }
 sha2 = "0.10"
 snafu = "0.8"
@@ -34,7 +34,7 @@ lru = "0.12.3"
 hex = "0.4.3"
 
 [dev-dependencies]
-hotshot-example-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "rc-0.5.71" }
+hotshot-example-types = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "bump/rc-0.5.71" }
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = [
