--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ async-compatibility-layer = { version = "1.1", default-features = false, feature
 async-lock = "2.8"
 async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
 async-trait = "0.1"
+bincode = "1.3"
 clap = { version = "4.5", features = ["derive", "env"] }
 committable = "0.2"
 derivative = "2.2"
@@ -37,4 +38,6 @@ hex = "0.4.3"
 hotshot-example-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.70" }
 
 [lints.rust]
-unexpected_cfgs = { level = "warn", check-cfg = ['cfg(async_executor_impl, values("async-std", "tokio"))'] }
+unexpected_cfgs = { level = "warn", check-cfg = [
+    'cfg(async_executor_impl, values("async-std", "tokio"))',
+] }
