--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,10 +18,10 @@ clap = { version = "4.5", features = ["derive", "env"] }
 committable = "0.2"
 derivative = "2.2"
 futures = "0.3"
-hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "bump/rc-0.5.72" }
-hotshot-builder-api = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "bump/rc-0.5.72" }
-hotshot-events-service = { git = "https://github.com/EspressoSystems/hotshot-events-service.git", branch = "hotshot/rc-0.5.72" }
-hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "bump/rc-0.5.72" }
+hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.72" }
+hotshot-builder-api = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.72" }
+hotshot-events-service = { git = "https://github.com/EspressoSystems/hotshot-events-service.git", tag = "0.1.44" }
+hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.72" }
 serde = { version = "1.0", features = ["derive"] }
 sha2 = "0.10"
 snafu = "0.8"
@@ -35,18 +35,9 @@ lru = "0.12.3"
 hex = "0.4.3"
 
 [dev-dependencies]
-hotshot-example-types = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "bump/rc-0.5.72" }
+hotshot-example-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.72" }
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = [
     'cfg(async_executor_impl, values("async-std", "tokio"))',
 ] }
-
-[patch."https://github.com/EspressoSystems/HotShot.git"]
-hotshot = { git = "https://github.com/EspressoSystems//HotShot.git", branch = "bump/rc-0.5.72" }
-hotshot-builder-api = { git = "https://github.com/EspressoSystems//HotShot.git", branch = "bump/rc-0.5.72" }
-hotshot-example-types = { git = "https://github.com/EspressoSystems//HotShot.git", branch = "bump/rc-0.5.72" }
-hotshot-types = { git = "https://github.com/EspressoSystems//HotShot.git", branch = "bump/rc-0.5.72" }
-
-[patch."https://github.com/EspressoSystems/hotshot-events-service.git"]
-hotshot-events-service = { git = "https://github.com/EspressoSystems//hotshot-events-service.git", branch = "hotshot/rc-0.5.72" }
