--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,10 +18,10 @@ clap = { version = "4.5", features = ["derive", "env"] }
 committable = "0.2"
 derivative = "2.2"
 futures = "0.3"
-hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.72" }
-hotshot-builder-api = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.72" }
-hotshot-events-service = { git = "https://github.com/EspressoSystems/hotshot-events-service.git", tag = "0.1.44" }
-hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.72" }
+hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "bump/rc-0.5.73" }
+hotshot-builder-api = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "bump/rc-0.5.73" }
+hotshot-events-service = { git = "https://github.com/EspressoSystems/hotshot-events-service.git", branch = "hotshot/rc-0.5.73" }
+hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "bump/rc-0.5.73" }
 hex = "0.4.3"
 lru = "0.12.3"
 serde = { version = "1.0", features = ["derive"] }
@@ -35,7 +35,7 @@ tracing = "0.1"
 vbs = "0.1"
 
 [dev-dependencies]
-hotshot-example-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "0.5.72" }
+hotshot-example-types = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "bump/rc-0.5.73" }
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = [
