--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "hotshot-builder-core"
-version = "0.1.45"
+version = "0.1.46"
 edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -18,10 +18,10 @@ clap = { version = "4.5", features = ["derive", "env"] }
 committable = "0.2"
 derivative = "2.2"
 futures = "0.3"
-hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "rc-0.5.74", features = ["dependency-tasks"] }
-hotshot-builder-api = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "rc-0.5.74" }
-hotshot-events-service = { git = "https://github.com/EspressoSystems/hotshot-events-service.git", branch = "hotshot/rc-0.5.74" }
-hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "rc-0.5.74" }
+hotshot = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "bump/rc-0.5.76", features = ["dependency-tasks"] }
+hotshot-builder-api = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "bump/rc-0.5.76" }
+hotshot-events-service = { git = "https://github.com/EspressoSystems/hotshot-events-service.git", branch = "hotshot/rc-0.5.76" }
+hotshot-types = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "bump/rc-0.5.76" }
 hex = "0.4.3"
 lru = "0.12.3"
 serde = { version = "1.0", features = ["derive"] }
@@ -35,7 +35,7 @@ tracing = "0.1"
 vbs = "0.1"
 
 [dev-dependencies]
-hotshot-example-types = { git = "https://github.com/EspressoSystems/HotShot.git", tag = "rc-0.5.74" }
+hotshot-example-types = { git = "https://github.com/EspressoSystems/HotShot.git", branch = "bump/rc-0.5.76" }
 
 [lints.rust]
 unexpected_cfgs = { level = "warn", check-cfg = [
